<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".presentation.view.activity.MainActivity">


   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/search_view"
       android:layout_width="match_parent"
       android:layout_height="270dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@id/forecast_rv"
       android:layout_marginBottom="16dp"
       android:layout_marginTop="16dp"
       android:paddingEnd="10dp"
       android:paddingStart="10dp"
       android:background="@drawable/background_search">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/city_tf"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/days_tf"
          app:layout_constraintVertical_chainStyle="spread"
          android:inputType="text"
          android:hint="@string/hint_city_tf" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/days_tf"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/city_tf"
          app:layout_constraintBottom_toTopOf="@id/search_btn"
          android:inputType="number"
          android:hint="@string/hint_days_tf" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/search_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/days_tf"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:text="@string/btn_search_str" />

   </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/forecast_rv"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/search_view"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="16dp" />


   <ProgressBar
       android:id="@+id/loadingPb"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/search_view"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>